# PFM-Claude

./: .env.example  CLAUDE.md  README.md  backtest.md  eth_flow_index_efi_executive_summary.md  indice_eth.md  main.py  pyproject.toml
.claude/commands/: backtest.md  bug.md  (+4 more)
data/: efi_history.csv  efi_history.json
finanzas/: README.md  docker-compose.yml
finanzas/backend/: .env.example  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
finanzas/backend/alembic/: env.py
finanzas/backend/alembic/versions/: 0001_initial_schema.py  0002_add_budget_currency.py  0003_add_fx_rates.py
finanzas/backend/app/: config.py  database.py  main.py
finanzas/backend/app/models/: __init__.py  account.py  budget.py  category.py  fx_rate.py  transaction.py  upload_log.py
finanzas/backend/app/parsers/: base.py  registry.py
finanzas/backend/app/parsers/csv/: amex.py  banco_chile.py  bank_of_america.py  bci.py  chase.py  citi.py  mach.py  mercado_pago.py  santander.py  schwab.py  tenpo.py  wells_fargo.py
finanzas/backend/app/parsers/pdf/: banco_chile.py  base_pdf.py  bci.py  santander.py
finanzas/backend/app/routers/: accounts.py  budget.py  comparison.py  fx.py  summary.py  transactions.py  upload.py
finanzas/backend/app/schemas/: account.py  budget.py  summary.py  transaction.py  upload.py
finanzas/backend/app/services/: budget_service.py  category_service.py  dedup_service.py  fx_service.py  summary_service.py  upload_service.py
source/: __init__.py  config.py  main.py
specs/: backtest_feature.md  eth_flow_index.md
tests/: __init__.py  conftest.py
(+68 files in other folders)
